mcp-attr/tests/compile_fail/complete_not_result.stderr
error[E0277]: the `?` operator can only be applied to values that implement `Try`
 --> tests/compile_fail/complete_not_result.rs:5:1
  |
5 | #[complete_fn]
  | ^^^^^^^^^^^^^^ the `?` operator cannot be applied to type `Vec<std::string::String>`
  |
  = help: the trait `Try` is not implemented for `Vec<std::string::String>`
